body, height trick to fix header on mobile chrome

--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,12 @@
   box-sizing: inherit;
 }
 
+html,
+body {
+  height: 100%;
+  overflow: auto;
+}
+
 html {
   box-sizing: border-box;
   font-size: 62.5%;
